--- a/src/SON/CategoriaBundle/Resources/config/routing.yml
+++ b/src/SON/CategoriaBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 categoria_homepage:
     pattern:  /categorias
     defaults: { _controller: CategoriaBundle:Default:index }
+
+categoria_buscar_categoria_nome_produto:
+    pattern:  /categorias/{nomeCategoria}/{nomeProduto}
+    defaults: { _controller: CategoriaBundle:Default:buscarCategoriaMaisProduto }
