--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -4,7 +4,7 @@ parameters:
     database_port:     ~
     database_name:     sf2_son_catalogo
     database_user:     root
-    database_password: root
+    database_password:
 
     mailer_transport:  smtp
     mailer_host:       localhost
