--- a/src/SON/CatalogoBundle/Resources/config/routing.yml
+++ b/src/SON/CatalogoBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 catalogo_homepage:
     pattern:  /hello/{name}/{quantidade}
     defaults: { _controller: CatalogoBundle:Default:index }
+
+CatalogoBundle_catalogo:
+   resource: "@CatalogoBundle/Resources/config/routing/catalogo.yml"
+   prefix:   /catalogo
