Modulo 4 - Geradores Aula 3 | Instalando Assets

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -20,7 +20,9 @@ monolog:
             level: info
 
 assetic:
+    bundle: [ "CatalogoBundle" ]
     use_controller: true
+
 
 #swiftmailer:
 #    delivery_address: me@example.com
