Modulo 4 - Geradores Aula 4 | Dicas Annotations

--- a/src/SON/CatalogoBundle/Resources/config/routing.yml
+++ b/src/SON/CatalogoBundle/Resources/config/routing.yml
@@ -5,3 +5,8 @@ catalogo_homepage:
 CatalogoBundle_catalogo:
    resource: "@CatalogoBundle/Resources/config/routing/catalogo.yml"
    prefix:   /catalogo
+
+CatalogoBundle_catalogo_annotation:
+  resource: "@CatalogoBundle/Controller"
+  prefix:   /catalogo
+  type: annotation
