Exercicio: Fase 2 do Projeto - Exercicio 1

--- a/src/SON/CategoriaBundle/Resources/config/routing.yml
+++ b/src/SON/CategoriaBundle/Resources/config/routing.yml
@@ -5,3 +5,11 @@ categoria_homepage:
 categoria_buscar_categoria_nome_produto:
     pattern:  /categorias/{nomeCategoria}/{nomeProduto}
     defaults: { _controller: CategoriaBundle:Default:buscarCategoriaMaisProduto }
+
+CategoriaBundle_categoria:
+        resource: "@CategoriaBundle/Resources/config/routing/categoria.yml"
+        prefix:   /categoria
+
+CategoriaBundle_produto:
+        resource: "@CategoriaBundle/Resources/config/routing/produto.yml"
+        prefix:   /produto
