Módulo 6 | Aulas 1,2 e 3 | Login e Logout Default Symfony

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,6 +6,11 @@ catalogo:
     resource: "@CatalogoBundle/Resources/config/routing.yml"
     prefix:   /
 
+UserBundle:
+    resource: "@UserBundle/Controller"
+    prefix:   /
+    type:     annotation
+
 # Internal routing configuration to handle ESI
 #_internal:
 #    resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
