--- a/src/SON/CatalogoBundle/Resources/config/routing.yml
+++ b/src/SON/CatalogoBundle/Resources/config/routing.yml
@@ -4,7 +4,7 @@ catalogo_homepage:
 
 CatalogoBundle_catalogo:
    resource: "@CatalogoBundle/Resources/config/routing/catalogo.yml"
-   prefix:   /catalogo
+   prefix:   /
 
 CatalogoBundle_catalogo_annotation:
   resource: "@CatalogoBundle/Controller"
