--- a/src/SON/CatalogoBundle/Resources/config/routing.yml
+++ b/src/SON/CatalogoBundle/Resources/config/routing.yml
@@ -8,5 +8,5 @@ CatalogoBundle_catalogo:
 
 CatalogoBundle_catalogo_annotation:
   resource: "@CatalogoBundle/Controller"
-  prefix:   /catalogo
+  prefix:   /
   type: annotation
